--- a/client/index.html
+++ b/client/index.html
@@ -7,12 +7,11 @@
     <meta property="og:title" content="Visionary Hub - Projects & Clients" />
     <meta property="og:description" content="Showcasing our latest projects and happy clients. Transform your vision with Visionary Hub." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta property="og:image" content="/opengraph.jpg" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@replit" />
     <meta name="twitter:title" content="Visionary Hub - Projects & Clients" />
     <meta name="twitter:description" content="Showcasing our latest projects and happy clients. Transform your vision with Visionary Hub." />
-    <meta name="twitter:image" content="https://replit.com/public/images/opengraph.png" />
+    <meta name="twitter:image" content="/opengraph.jpg" />
 
     <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
